<resources>
    <string name="app_name">ShopEasy</string>

    <!-- Fragment titles -->
    <string name="title_shop_list">Nearby Vendors</string>
    <string name="title_orders">Orders</string>
    <string name="title_settings">Account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders_received">Orders Received</string>
    <string name="inventory">Inventory</string>

    <!--    Sign up flow-->
    <string name="sign_up_customer">Customer Sign Up</string>
    <string name="sign_up_vendor">Vendor Sign Up</string>
    <string name="additional_details">Additional Details</string>
    <string name="vendor_sign_up">Vendor Sign Up</string>
    <string name="phone_number_text">Phone Number</string>
    <string name="request_otp_text">Request OTP</string>
    <string name="otp_text">OTP</string>
    <string name="validate_text">Validate</string>
    <string name="name_text">Name</string>
    <string name="locality_text">Locality</string>
    <string name="society_name_text">Society Name</string>
    <string name="flat_no_text">Flat No.</string>
    <string name="connect_email_address_optional_text">Connect Email Address (Optional)</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="re_enter_password_text">Re-enter Password</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="shop_name_text">Shop Name</string>
    <string name="proprietor_name_text">Proprietor Name</string>
    <string name="shop_type_text">Shop Type</string>
    <string name="use_phone_number_text">Use Phone</string>
    <string name="use_email_text">Use email</string>
    <string name="not_registered_text">Not registered?</string>
    <string name="register_as">How do you wish to register?</string>
    <string name="customer_text">Customer</string>
    <string name="vendor_text">Vendor</string>
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="city_text">City</string>
    <string name="address_text">Address</string>
    <string name="fist_line_text">Fist Line</string>
    <string name="second_line_text">Second Line</string>
    <string name="pin_code_text">Pin Code</string>
    <string name="shop_address_text">Shop Address</string>
    <string name="state_text">State</string>
    <string name="about_shop_text">About Shop</string>
    <string name="verify_otp">Verify</string>
    <string name="welcome_message">Welcome to ShopEasy, %1$s!</string>
    <string name="welcome_vendor">Yay, %1$s is now on ShopEasy!</string>

    <!--    Inventory-->
    <string name="empty_inventory">Can\'t find your things… could they be empty?\nPress the + sign to start</string>
    <string name="loading_inventory">Loading your things…</string>
    <string name="add_item_to_inventory">Add new item to Inventory</string>
    <string name="new_item_name">Item Name</string>
    <string name="new_item_type">Item Type</string>
    <string name="quantity">Quantity</string>
    <string name="new_item_price">Price</string>
    <string name="labels">Labels:</string>
    <string name="label_new">New</string>
    <string name="label_popular">Popular</string>
    <string name="rupee_symbol">₹</string>
    <string name="contents_helper_text">e.g &lt;b>500&lt;/b> grams</string>
    <string name="new_item_unit">Unit</string>
    <string name="new_item_contents">Contents</string>
    <string name="unit_helper_text">e.g. 500 &lt;b>grams&lt;/b></string>
    <string name="description_text">Description (Optional)</string>

    <!--    Toolbar action items-->
    <string name="log_out">Log Out</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="search">Search</string>
    <string name="no_vendors_found_text">No vendors found in your area :(</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="shops_in_the_area_text">"Shops in the area "</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="upload_from_text">Upload from</string>
    <string name="gallery_text">Gallery</string>
    <string name="camera_text">Camera</string>
    <string name="product_price_currency">Currency</string>

</resources>
