<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#92DCE5"
            android:fontFamily="@font/roboto"
            android:padding="5dp"
            android:text="@string/add_item_to_inventory"
            android:textColor="@color/Black"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/new_item_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_name_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/new_item_type">
            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/item_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/quantity">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/new_item_price">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labels"
                android:textColor="@color/Black"
                android:gravity="center" />

            <com.google.android.material.chip.ChipGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/new_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:checkable="true"
                    android:text="@string/label_new"/>
                <com.google.android.material.chip.Chip
                    android:id="@+id/popular_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:checkable="true"
                    android:text="@string/label_popular" />

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>


    </LinearLayout>
</androidx.core.widget.NestedScrollView>