<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vendor_main_nav"
    app:startDestination="@id/vendor_inventory">

    <fragment
        android:id="@+id/vendor_inventory"
        android:name="com.unc0ded.shopeasy.views.fragments.VendorInventoryFragment"
        android:label="@string/inventory"
        tools:layout="@layout/fragment_vendor_inventory" >
        <action
            android:id="@+id/action_add_to_inventory"
            app:destination="@id/inventory_add_item"
            app:enterAnim="@anim/fragment_fade_enter" />
    </fragment>
    <fragment
        android:id="@+id/vendor_orders"
        android:name="com.unc0ded.shopeasy.views.fragments.VendorOrdersFragment"
        android:label="@string/orders_received"
        tools:layout="@layout/fragment_vendor_orders" />
    <fragment
        android:id="@+id/vendor_settings"
        android:name="com.unc0ded.shopeasy.views.fragments.VendorSettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_vendor_settings" />
    <dialog
        android:id="@+id/inventory_add_item"
        android:name="com.unc0ded.shopeasy.views.fragments.AddToInventoryDialogFragment"
        android:label="New Item"
        tools:layout="@layout/fragment_add_to_inventory"/>
</navigation>