<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingHorizontal="10dp"
    android:background="@color/compColor"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/sora_light"
        android:text="@string/register_as"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_customer_sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:backgroundTint="@color/bgColor"
            android:fontFamily="@font/sora_regular"
            android:text="@string/customer_text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/popup_vendor_sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:backgroundTint="@color/bgColor"
            android:fontFamily="@font/sora_regular"
            android:text="@string/vendor_text" />
    </LinearLayout>

</LinearLayout>